Fix z-index for navigator and slides content

--- a/src/components/actionsBar/styles.module.scss
+++ b/src/components/actionsBar/styles.module.scss
@@ -5,9 +5,7 @@
 
     div {
         padding: 15px;
-
         font-size: 20px;
-        z-index: 5;
 
         opacity: 0.8;
         scale: 1;
