--- a/src/components/navigator/styles.module.scss
+++ b/src/components/navigator/styles.module.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     transition: all 250ms ease;
-    z-index: 100;
+    z-index: 10;
 
     display: flex;
     padding: 30px 64px 10px 64px;
