--- a/src/components/revealjsWrapper/revealjsNoSSRWrapper/styles.module.scss
+++ b/src/components/revealjsWrapper/revealjsNoSSRWrapper/styles.module.scss
@@ -2,6 +2,11 @@
     position: absolute;
     right: 15px;
     top: 15px;
+    z-index: 5;
+
+    &.fullscreen {
+        z-index: 12;
+    }
 }
 
 .revealViewportWrapper {
